# Use_external_libraries

./: .gitignore  README.md
armadillo/: CMakeLists.txt
armadillo/src/: main.cpp
arrow_parquet/: CMakeLists.txt  main.cpp  py_out.parquet  test_out.py  test_reader.cpp  test_writer.cpp
boost_dll/: compile.sh  lib1.cpp  lib2.cpp  main.cpp
boost_histogram/: hist_encoded_data.cpp  main.cpp
boost_mp11/: mp11.cpp
boost_python/: CMakeLists.txt
boost_python_call_cpp/: hello.cpp  hello.py
boost_signals2/: main.cpp
cpp_call_python/: .gitignore  CMakeLists.txt  main.cpp  test.py
cuda_multi_gpus/: CMakeLists.txt  mgpu.cpp  mgpu_kernel.cu  mgpu_kernel.cuh
cuda_quaternion_projection/: CMakeLists.txt  main.cpp  main.cu  main.h
cuda_reduction/: CMakeLists.txt  main.cu
dlopen/: CMakeLists.txt
dlopen/include/: dlloader.h  dlloader_posix.h  dlloader_win32.h  main.h
dlopen/plugins/plugin1/: CMakeLists.txt
dlopen/plugins/plugin1/include/: plugin1.h
dlopen/plugins/plugin1/src/: plugin1.cpp
dlopen/plugins/plugin2/: CMakeLists.txt
dlopen/plugins/plugin2/include/: plugin2.h
dlopen/plugins/plugin2/src/: plugin2.cpp
dlopen/src/: main.cpp
icu_string/: CMakeLists.txt
icu_string/src/: main.cpp
nvrtc/: CMakeLists.txt  common.h  mgpu.cpp  mgpu_kernel.cu  mgpu_kernel.cuh  nvrtc_helper.cpp  nvrtc_helper.h
plot_with_plplot/: main.cpp
python_subinterpreter/: gettid.py  main.cpp
read_zipped_file/: README.md  main_boost.cpp  meson.build
sycl_multi_gpus/: mgpu.cpp  mgpu_kernel.dp.cpp  mgpu_kernel.dp.hpp
tensorflow_cpp/: compile.sh  encode.py  error.py  gradients.h  main  main.cpp
tensorflow_cpp/best_encoder_model/: keras_metadata.pb  saved_model.pb
tensorflow_cpp/best_encoder_model/variables/: variables.data-00000-of-00001  variables.index
torch/: CMakeLists.txt
torch/src/: cuda_torch.cu  cuda_torch.h  cuda_torch_example.cpp  misc.cpp
torch/test_data/: RMSD.pt  Untitled.ipynb  srvs_10_100_tau_10_best_encoder_model.pt  srvs_10_100_test_2_10_best_encoder_model.pt  test.py
torch/test_data/.virtual_documents/: Untitled.ipynb
